--- a/src/index.scss
+++ b/src/index.scss
@@ -3,17 +3,24 @@
 @import "./base/utilities";
 @import "./base/variables";
 
+//CONTAINERS
+@import "./containers/Checkout/ContactData/ContactData";
+
 //COMPONENTS
-@import "./components/UI/Backdrop/Backdrop";
 @import "./components/Burger/BuildControls/BuildControls";
 @import "./components/Burger/BuildControls/BuildControl/BuildControl";
 @import "./components/Burger/Burger";
 @import "./components/Burger/BurgerIngredient/BurgerIngredient";
-@import "./components/UI/Button/Button";
 @import "./hoc/Layout/Layout";
 @import "./components/Logo//Logo";
 @import "./components/Navigation/NavigationItems/NavigationItems";
 @import "./components/Navigation/SideDrawer/DrawerToggle/DrawerToggle";
 @import "./components/Navigation/SideDrawer/SideDrawer";
 @import "./components/Navigation/Toolbar/Toolbar";
+@import "./components/Order/Order";
+@import "./components/Order/CheckoutSummary/CheckoutSummary";
+@import "./components/UI/Backdrop/Backdrop";
+@import "./components/UI/Button/Button";
+@import "./components//UI/Input/Input";
 @import "./components/UI/Modal/Modal";
+@import "./components/UI/Spinner/Spinner";
